# euler

./: euler201.cabal  js.js
app/: Main.hs
src/: Euler200.hs  Euler202.hs  Lib.hs
test/: Euler200Spec.hs  Euler202Spec.hs  Spec.hs
