name:                euler201
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/euler201#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                    ,  Euler200
  build-depends:       base >= 4.7 && < 5
                    ,  hashtables
  default-language:    Haskell2010

executable euler201-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                    ,  euler201
  default-language:    Haskell2010

test-suite euler201-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Euler200Spec.hs
  build-depends:       base
                     , euler201
                     , hspec
                     , hashtables
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/euler201
